--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "browser-sync": "^2.26.3",
+    "child_process": "^1.0.2",
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-imagemin": "^5.0.3",
